--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ allprojects {
 
     version = '1.0'
     ext {
-        appName = 'gdx-scala-demo'
+        appName = 'pong'
         gdxVersion = '1.7.2'
         roboVMVersion = '1.12.0'
         box2DLightsVersion = '1.4'
