--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ project(":desktop") {
 
     dependencies {
         compile project(":core")
+        compile "org.scala-lang:scala-library:$scalaVersion"
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
